# TinyTalk

./: Builtin.h  BuiltinFile.cpp  BuiltinFile.h  BuiltinInteger.cpp  BuiltinInteger.h  BuiltinObject.cpp  BuiltinObject.h  BuiltinObjectArray.cpp  BuiltinObjectArray.h  BuiltinPool.cpp  BuiltinPool.h  BuiltinSocket.cpp  BuiltinSocket.h  BuiltinString.cpp  BuiltinString.h  BuiltinSystem.cpp  BuiltinSystem.h  BuiltinUtil.cpp  BuiltinUtil.h  BytecodeGen.cpp  BytecodeGen.h  BytecodeInterpreter.cpp  BytecodeInterpreter.h  CMakeLists.txt  Common.cpp  Common.h  Evaluator.cpp  Evaluator.h  Expression.cpp  Expression.h  GCBarrier.cpp  GCBarrier.h  Interpreter.cpp  Interpreter.h  Lock.h  MemAllocator.cpp  MemAllocator.h  Message.h  Parser.cpp  Parser.h  (+42 more)
ttlib/: cmd.tt  cont.tt  control.tt  exec.tt  file.tt  init.tt  io.tt  number.tt  socket.tt
ttsrc/: http.tt  http_handler.tt  http_request.tt  http_response.tt  http_util.tt  loops.tt  sample.tt  sat.tt  sat_form.tt  sat_solver.tt  test.tt
